# MiniMax

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
PACE-CommonGround/: README.md
adaptive-belief-network/: .gitignore  PLAN.md  README.md  package.json
adaptive-belief-network/examples/: demo.js
adaptive-belief-network/src/: Agent.js  Analysis.js  Belief.js  BeliefNetwork.js  MessageSystem.js  Persistence.js  Simulator.js  TopologyManager.js  UpdateTrigger.js  Visualizer.js  cli.js  index.js
adaptive-belief-network/tests/: Agent.test.js  Analysis.test.js  Belief.test.js  BeliefNetwork.test.js  MessagePassing.test.js  Persistence.test.js  Simulator.test.js  TopologyManager.test.js  belief-network.test.js  steps-5-8.test.js
adversarial-denoising-draft-agent/: README.md  requirements.txt
adversarial-domain-diffuser/: astro_chem_test.py  domain_shift_test.py  test_usage.py  test_usage2.py
adversarial-domain-diffuser/memory/: project-usage-log.md
adversarial-domain-diffuser/results/: LegalBench_eval_20260227_145313.json  LegalBench_eval_20260228_162521.json  LegalBench_eval_20260302_205329.json  LegalBench_eval_20260322_095412.json  LegalBench_eval_20260322_095421.json  LegalBench_eval_20260327_022437.json  LegalBench_eval_20260327_022534.json  LegalBench_eval_20260406_032507.json  MedicalQA_eval_20260227_145232.json  MedicalQA_eval_20260228_162446.json  MedicalQA_eval_20260228_162522.json  MedicalQA_eval_20260304_175218.json  MedicalQA_eval_20260304_175231.json  MedicalQA_eval_20260322_095352.json  (+5 more)
adversarial-domain-trader-benchmarking/: README.md  requirements.txt
adversarial-robust-reasoning-evaluator/: README.md  requirements.txt
adversarial-web-agent/: README.md
beam-draft-rl/: .gitignore  README.md  USAGE_REPORT.md  requirements.txt
capacity-weighted-ensemble/: .coverage  README.md  requirements.txt
causal-adversarial-drift-tracker/: README.md  requirements.txt
cgpm/: README.md  full_output.txt  pyproject.toml  test_output.txt  test_results.txt  test_results_final.txt
cgpm/src/cgpm/: __init__.py  core.py  engine.py  gate.py  store.py
cgpm/tests/: test_core.py  test_engine.py  test_gate.py  test_store.py
collaborative-denoising-interaction-graph/: README.md  requirements.txt
continuous-time-reasoning/: use_ctrd_state.py
curriculum-draft-optimizer/: README.md  requirements.txt
demos/: multi_hop_navigation.py  simple_search.py
denoised-collaborative-fact-assembler/: README.md  requirements.txt
directed-interaction-ma/: README.md  requirements.txt
draft-flow-reasoning-denoiser/: README.md
draft-logic-task-generator/: README.md
drift-sense-interaction-monitor/: README.md  requirements.txt
dynamic-negotiation-network/: .gitignore  README.md  package-lock.json  package.json
examples/: demo.js
explainable-collaborative-depth-optimizer/: README.md  requirements.txt
failure-aware-self-healing-agent/: README.md  requirements.txt
flow-heal-reasoning-pipeline/: README.md  Regulating_README.md  requirements.txt  simple_test.py  test_regulator.py  test_simple.py
forecast-guided-effort-allocation/: README.md
gesm/: README.md
info-efficient-multiagent/: comparison.json  complex_puzzle_test.py  real_scenario_test.py  reproduce_coordinator.py  results.json  science_throughput_test.py
judged-continual-multimodal/: README.md  requirements.txt
kepler-skills-distiller/: .gitignore  CHANGELOG.md  README.md  discovery_output.txt  requirements.txt  usage_test_output.json
logic-truth-resilient-agentic-decoder/: README.md  requirements.txt
milestone-guardian/: README.md
milestone-verified-uncertainty-estimation/: README.md
mira-ko/: README.md
mirror/: .gitignore  README.md  pyproject.toml  requirements.txt
mirror/src/mirror/: __init__.py  cli.py  llm.py  models.py  prober.py
mirror/tests/: test_cli.py  test_models.py  test_prober.py
multi-sourced-verifiable-fact-checker/: README.md
need-state-memory/: README.md
parallel-agentic-plan-over-graph/: README.md  requirements.txt
pattern-aware-milestone-critic/: README.md
proof-narrative-memory/: README.md
provable-reason/: README.md
pruned_adaptive_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
psyche-rag/: README.md
raptor/: .gitignore  LICENSE  README.md  pyproject.toml
raptor/docs/: api.md  architecture.md  configuration.md  experiments.md  tutorial.md
raptor/examples/: basic_usage.py  custom_agent.py  run_experiment.py
raptor/src/raptor/: __init__.py  agents.py  config.py  dashboard.py  disagreement.py  entropy_tracker.py  experiments.py  integration.py  orchestrator.py  utility.py
raptor/src/raptor_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
raptor/tests/: __init__.py  test_agents.py  test_dashboard.py  test_disagreement.py  test_entropy_tracker.py  test_experiments.py  test_integration.py  test_orchestrator.py  test_utility.py
reasoning-watchdog/: README.md  requirements.txt
resilient-adaptive-agent/: README.md  package-lock.json  package.json
robust-continual-flow/: README.md
self-healing-neurosym-trajectory-repair/: README.md  requirements.txt  setup.py
self-healing-rag/: README.md
sink-dpip-harness/: README.md
soma-subagent-memory-governance/: README.md
src/: Agent.js  FailureModeDetector.js  RAA.js  SelfVerification.js  __init__.py  agent.py  browser_tool.py  checklist.py  cli.py  evaluation.py  index.js  pruning.py  recovery.py  skill.py  skill_selector.py  trajectory_graph.py  uncertainty.py
tests/: CATTSAllocator.test.js  ChecklistReward.test.js  RAA.test.js  SelfVerification.test.js  cli.test.js  placeholder.test.js  test_agent.py  test_browser_tool.py  test_checklist.py  test_evaluation.py  test_integrated_agent.py  test_pruning.py  test_recovery.py  test_skill.py  test_skill_selector.py  test_trajectory.py  test_trajectory_graph.py  test_uncertainty.py
trajectory-verification-cascade/: .coverage  CHANGELOG.md  README.md  fatigue_test.json  hijack_test.json  requirements.txt  test_tvc.py
varc/: .gitignore  README.md
veritas/: IMPLEMENTATION.md  README.md
(+296 files in other folders)
